--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="César Torres García" />
     <meta
       name="description"
-      content="César Torres García amigo y servidor. Ingeniero Informático especializado en Ingeniería Web. Apasionado de las nuevas tecnologías y metodologías ágiles"
+      content="César Torres García amigo. Ingeniero Informático especializado en Ingeniería Web. Apasionado de las nuevas tecnologías y metodologías ágiles"
     />
     <meta
       name="keywords"
