Se cambia la foto de perfil y se corrigen infomración personal

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="César Rodríguez, ingeniero de software, desarrollador de software, programador, metodologías ágiles, scrum, .net, c#, jQuery"
+      content="César Torres, ingeniero de software, desarrollador de software, programador, metodologías ágiles, scrum, .Net, c#, jQuery, TypeScript"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#13CD8E" />
@@ -18,20 +18,20 @@
     <title>César Torres  • Ingeniero de Software</title>
 
     <!-- Canonical link -->
-    <link href="https://cesarrrguez.github.io" rel="canonical" />
+    <link href="https://github.com/cesarsystem04" rel="canonical" />
 
     <!-- Alternate link -->
-    <link href="hhttps://cesarrrguez.github.io" hreflang="es" rel="alternate" />
+    <link href="https://github.com/cesarsystem04" hreflang="es" rel="alternate" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="profile" />
-    <meta property="og:title" content="César Torres  Ingeniero de Software" />
+    <meta property="og:title" content="César Torres García  Ingeniero de Software" />
     <meta
       property="og:description"
-      content="César Rodríguez. Ingeniero Informático especializado en
+      content="César Torres García. Ingeniero Informático especializado en
     Ingeniería Web. Apasionado de las nuevas tecnologías y metodologías ágiles"
     />
-    <meta property="og:image" content="https://cesarrrguez.github.io/assets/img/photo.jpg" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/6675540?v=4" />
     <meta property="og:image:alt" content="César Rodríguez" />
     <meta property="og:url" content="https://cesarrrguez.github.io" />
     <meta property="og:site_name" content="César Rodríguez" />
@@ -42,10 +42,10 @@
     <meta name="twitter:title" content="César Torres  • Ingeniero de Software" />
     <meta
       name="twitter:description"
-      content="César Rodríguez. Ingeniero Informático especializado en
+      content="César Torres. Ingeniero Informático especializado en
     Ingeniería Web. Apasionado de las nuevas tecnologías y metodologías ágiles"
     />
-    <meta name="twitter:image" content="https://cesarrrguez.github.io/assets/img/photo.jpg" />
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/6675540?v=4" />
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
@@ -388,70 +388,6 @@
       </section>
       <!-- End Personal skills -->
 
-      <!-- ======= Recommendations ======= -->
-      <!-- <section id="recommendations">
-        <div class="container">
-          <div class="owl-carousel recommendations-carousel" data-aos="zoom-in">
-            <div class="recommendation-item" itemscope itemtype="http://schema.org/Person">
-              <img
-                src="assets/img/recommendations/valery.jpg"
-                class="recommendation-img"
-                alt="Valery"
-                itemprop="image"
-              />
-              <h3 itemprop="name">Valery Olivo Hernández</h3>
-              <h4 itemprop="jobTitle">Digital Designer | Digital Experience | IZERTIS</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Siempre es un placer trabajar con profesionales como César Rodríguez. Es un pilar
-                muy importante de la empresa, tiene una dosis perfecta de sentido común y buen
-                gusto, se esfuerza cada día para lograr los objetivos planteados, tiene una
-                paciencia de oro y todos nuestros compañeros y clientes se sienten a gusto
-                trabajando con él. En resumen, es un excelente trabajador, compañero y una persona
-                inigualable. Espero que podamos trabajar juntos muchos años más.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-
-            <div class="recommendation-item" itemscope itemtype="http://schema.org/Person">
-              <img
-                src="assets/img/recommendations/carlos.jpg"
-                class="recommendation-img"
-                alt="Carlos"
-                itemprop="image"
-              />
-              <h3 itemprop="name">Carlos Bisio</h3>
-              <h4 itemprop="jobTitle">International Project Manager</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                César Rodríguez es un profesional serio y responsable. Entre sus cualidades están la
-                dedicación y la capacidad resolutiva. Participé con César Rodríguez en el desarrollo
-                de varios proyectos web y en todos he valorado su capacidad y buena disposición.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-
-            <div class="recommendation-item" itemscope itemtype="http://schema.org/Person">
-              <img
-                src="assets/img/recommendations/weena.jpg"
-                class="recommendation-img"
-                alt="Weena"
-                itemprop="image"
-              />
-              <h3 itemprop="name">Weena Jimenez</h3>
-              <h4 itemprop="jobTitle">Investigador principal en KNOWDLE MEDIA GROUP</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                César Rodríguez sabe trabajar muy bien en equipo y aporta sus conocimientos para
-                mejorar y facilitar el trabajo de todos los compañeros. Trabajando en equipo de esta
-                manera logra una excelente calidad del producto final entregado a cliente.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-        </div>
-      </section> -->
-      <!-- End Recommendations -->
 
       <!-- ======= Contact ======= -->
       <section id="contact">
@@ -577,13 +513,10 @@
           <a href="https://www.linkedin.com/in/cesarrrguez" rel="me" target="_blank">
             <i class="bx bxl-linkedin"></i>
           </a>
-          <a href="https://github.com/cesarrrguez" rel="me" target="_blank">
+          <a href="https://github.com/cesarsystem04" rel="me" target="_blank">
             <i class="bx bxl-github"></i>
           </a>
-          <a href="https://codepen.io/cesarrrguez" rel="me" target="_blank">
-            <i class="bx bxl-codepen"></i>
-          </a>
-          <a href="mailto:cesar.rrguez@gmail.com" rel="me">
+          <a href="mailto:cesarsystem04@gmail.com" rel="me">
             <i class="bx bxs-envelope"></i>
           </a>
         </div>
